--- a/LAB_7/styles.css
+++ b/LAB_7/styles.css
@@ -282,12 +282,13 @@ a {
     margin: auto;
     border: 1px solid #000;
     overflow: hidden; 
+    background-color: #faf387;
 }
 
 .controls {
     width: 100%;
     height: 100%;
-    background-color: #eee;
+    background-color: #ffe77e;
 }
 
 .anim {
@@ -297,6 +298,7 @@ a {
     position: absolute;
     bottom: 0;
     pointer-events: all;
+    background-color: #ffd980;
 }
 
 #animationCanvas {
@@ -305,6 +307,7 @@ a {
 }
 
 button {
+    box-sizing: border-box;
     position: absolute;
     top: 10px;
     left: 15px;
@@ -313,6 +316,7 @@ button {
     font-size: 12px;
     cursor: pointer;
 }
+
 
 #startButton {
     background-color: #4CAF50;
@@ -333,6 +337,20 @@ button {
     border: none;
     left: 90px;
 }
+
+#playButton {
+    top: auto;
+    left: auto;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    padding: 10px 20px;
+}
+
 
 #statusMessage {
     position: absolute;
